add validations and update doc (swagger 3.0)
