# doc/swagger.yaml
@@ -1,4 +1,4 @@
-swagger: '2.0'
+openapi: '3.0.0'
 info:
   version: 1.0.0
   title: Ingest API
@@ -7,126 +7,9 @@ info:
     ## Authorization
 
     This API requires an API key to use. The key should be included in the `Authorization` header of all requests to the API. Example: `Authorization: Bearer <token>`
+servers:
+  - url: https://gateway.api.dev.globalfishingwatch.org
 
-securityDefinitions:
-  apiKey:
-    type: apiKey
-    in: header
-    name: authorization
-    description: format -> `Bearer <token>`
-definitions:
-  ValidationError:
-    type: object
-    required:
-      - fields
-      - general
-    properties:
-      fields:
-        type: array
-        items:
-          type: object
-          required:
-            - field
-            - errors
-          properties:
-            field:
-              type: string
-            errors:
-              type: array
-              items:
-                type: object
-                required:
-                  - code
-                  - description
-                properties:
-                  code:
-                    type: string
-                  description:
-                    type: string
-      general:
-        type: array
-        items:
-          type: object
-          required:
-            - code
-            - description
-          properties:
-            code:
-              type: string
-            description:
-              type: string
-  Position:
-    type: object
-    description: Position
-    required:
-      - vesselId
-      - lat
-      - lon
-      - timestamp
-    properties:
-      id:
-        title: Identifier
-        description: |
-          Alphanumeric identifier which uniquely identifies the entity.
-        type: string
-      lat:
-        title: Latitude
-        description: Latitude
-        type: number
-        format: float
-        minimum: -90
-        maximum: 90
-      lon:
-        title: Longitude
-        description: Longitude
-        type: number
-        format: float
-        minimum: -180
-        maximum: 180
-      timestamp:
-        title: Timestamp
-        description: |
-          ISO8601 representation of the date and time this position
-          was detected.
-        type: string
-        format: date-time
-      extraInfo:
-        title: Extra Info
-        type: object
-        description: |
-          More info about the vessel
-  PublicKey:
-    type: object
-    description: Public key
-    required:
-      - key
-    properties:
-      key:
-        title: key
-        description: |
-          Content of the key encoded in base64
-        type: string
-      version:
-        title: version
-        description: |
-          Version of the key
-        example: v1
-        type: string
-responses:
-  BadRequest:
-    description: |
-      Bad request. Invalid or wrong parameters were provided.
-    schema:
-      $ref: '#/definitions/ValidationError'
-
-  Unauthorized:
-    description: |
-      Unauthorized, either the api key is invalid or expired.
-
-  NotFound:
-    description: |
-      Not found. Either the dataset does not exist, or the specific entity
-      which was requested does not exist.
 paths:
   '/ingest/public-key':
     get:
@@ -135,19 +18,22 @@ paths:
       description: |
         Get public key for encryptation
       security:
-        - apiKey: []
-      produces:
-        - application/json
+        - ApiKeyAuth: []
       responses:
         '200':
-          schema:
-            $ref: '#/definitions/PublicKey'
-          description: |
-            Expected response to a successful request.
+          description: Expected response to a successful request.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PublicKey'
         '401':
-          $ref: '#/responses/Unauthorized'
+          description: Unauthorized, either the api key is invalid or expired.
         '400':
-          $ref: '#/responses/BadRequest'
+          description: Bad request. Invalid or wrong parameters were provided.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ValidationError'
   '/ingest/position':
     post:
       summary: |
@@ -155,34 +41,154 @@ paths:
       description: |
         Create new action
       security:
-        - apiKey: []
-      produces:
-        - application/json
+        - ApiKeyAuth: []
       parameters:
         - in: query
           name: encrypted
-          description: This param indicates if the body is encrypted with asymetric encriptation
-          required: false
-          default: false
-          type: boolean
-        - in: query
-          name: version-key
-          description: This param indicates the version of the key used to encrypt the body, if the body is encrypted. If the body is encrypted but this param is not informed, the api uses the last version of the key to decrypt the body
-          required: false
-          default: false
-          type: boolean
-        - in: body
-          name: action
           required: true
           schema:
-            type: array
-            items:
-              $ref: '#/definitions/Position'
-      responses:
-        '200':
+            type: boolean
+            default: false
           description: |
-            Expected response to a successful request.
+            This param indicates if the body is encrypted with asymetric encriptation. If it's true, the body must be `EncryptedPositionArray`, if it's false or not informed the body must be `PositionArray`
+        - in: query
+          name: version-key
+          required: false
+          schema:
+            type: string
+          description: This param indicates the version of the key used to encrypt the body, if the body is encrypted. If the body is encrypted but this param is not informed, the api uses the last version of the key to decrypt the body
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              oneOf:
+                - $ref: '#/components/schemas/PositionArray'
+                - $ref: '#/components/schemas/EncryptedPositionArray'
+
+      responses:
+        '204':
+          description: Expected response to a successful request.
         '401':
-          $ref: '#/responses/Unauthorized'
+          description: Unauthorized, either the api key is invalid or expired.
         '400':
-          $ref: '#/responses/BadRequest'
+          description: Bad request. Invalid or wrong parameters were provided.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ValidationError'
+
+components:
+  securitySchemes:
+    ApiKeyAuth:
+      type: apiKey
+      in: header
+      name: Authorization
+  schemas:
+    ValidationError:
+      type: object
+      required:
+        - fields
+        - general
+      properties:
+        fields:
+          type: array
+          items:
+            type: object
+            required:
+              - field
+              - errors
+            properties:
+              field:
+                type: string
+              errors:
+                type: array
+                items:
+                  type: object
+                  required:
+                    - code
+                    - description
+                  properties:
+                    code:
+                      type: string
+                    description:
+                      type: string
+        general:
+          type: array
+          items:
+            type: object
+            required:
+              - code
+              - description
+            properties:
+              code:
+                type: string
+              description:
+                type: string
+    EncryptedPositionArray:
+      type: array
+      description: Array of encrypted positions
+      items:
+        type: string
+    PositionArray:
+      type: array
+      description: Array of positions
+      items:
+        $ref: '#/components/schemas/Position'
+    Position:
+      type: object
+      description: Position
+      required:
+        - vesselId
+        - lat
+        - lon
+        - timestamp
+      properties:
+        id:
+          title: Identifier
+          description: |
+            Alphanumeric identifier which uniquely identifies the entity.
+          type: string
+        lat:
+          title: Latitude
+          description: Latitude
+          type: number
+          format: float
+          minimum: -90
+          maximum: 90
+        lon:
+          title: Longitude
+          description: Longitude
+          type: number
+          format: float
+          minimum: -180
+          maximum: 180
+        timestamp:
+          title: Timestamp
+          description: |
+            ISO8601 representation of the date and time this position
+            was detected.
+          type: string
+          format: date-time
+        extraInfo:
+          title: Extra Info
+          type: object
+          description: |
+            More info about the vessel
+    PublicKey:
+      type: object
+      description: Public key
+      required:
+        - key
+      properties:
+        key:
+          title: key
+          description: |
+            Content of the key encoded in base64
+          type: string
+        version:
+          title: version
+          description: |
+            Version of the key
+          example: v1
+          type: string
